--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@strapi/design-system": "^1.16.0",
     "@strapi/helper-plugin": "^4.20.5",
     "@strapi/icons": "^1.16.0",
+    "knex": "^3.1.0",
     "leaflet": "^1.9.4",
     "lodash": "^4.17.21",
     "prop-types": "^15.7.2",
@@ -43,6 +44,7 @@
     "@strapi/strapi": "^4.20.5",
     "@strapi/typescript-utils": "^4.17.0",
     "@types/leaflet": "^1.9.8",
+    "@types/lodash": "^4.17.4",
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
     "@types/react-router-dom": "^5.3.3",
